# scoutr-mcp

./: .coverage  .gitignore  README.md  coverage.xml  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0f7a3b419ac1_create_jobs_table_pgvector_init.py
src/scoutr/: main.py
src/scoutr/catalog/: __init__.py  ingest.py  job_repository.py  repository.py
src/scoutr/config/: __init__.py  settings.py
src/scoutr/db/: engine.py  models.py
src/scoutr/mcp_server/: __init__.py  server.py
src/scoutr/models/: __init__.py  job.py
src/scoutr/sources/: __init__.py  base.py  models.py  remoteok.py
tests/: test_ingest.py  test_remoteok.py
tests/fixtures/: remoteok.json
