[project]
name = "scoutr"
version = "0.1.0"
description = "A job search agent that finds & ranks job postings according to applicant preferences. Also contains an MCP server that allows agent to find jobs acros boards"
readme = "README.md"
requires-python = ">=3.12"

license = { text = "MIT" }
authors = [{ name = "Raktim Bora" }]

dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "mcp[cli]>=1.27.2",
    "pgvector>=0.4.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0,<2.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I isort, N pep8-naming, UP pyupgrade,
# B bugbear, SIM simplify, RUF ruff-specific, ANN annotations, ASYNC async checks.
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF", "ANN", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]  # test functions don't need full type annotations

# ---------------------------------------------------------------------------
# Type checking
# ---------------------------------------------------------------------------
[tool.mypy]
files = ["src"]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_unused_ignores = false
plugins = ["pydantic.mypy"]

# ---------------------------------------------------------------------------
# Tests + coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"          # async tests need no @pytest.mark.asyncio decorator
testpaths = ["tests"]
addopts = "--cov=scoutr --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["src/scoutr"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true
